--- a/src/app/modules/component/template.component.html
+++ b/src/app/modules/component/template.component.html
@@ -4,19 +4,13 @@
 
         <div
             class="max-w-none ml-3 mt-4 prose prose-sm"
-            [innerHTML]="sanitizer.bypassSecurityTrustHtml(data.component.content.question)"></div>
+            [innerHTML]="sanitizer.bypassSecurityTrustHtml(data.component.content.title)"></div>
         
         <!-- Name -->
         <div class="mt-4">
-            
-            <mat-radio-group
-                aria-labelledby="example-radio-group-label"                    
-                [value]="data.runtime.data.answer">
-                <mat-radio-button (click)="Select($any(option.value).key)" class="example-radio-button" *ngFor="let option of data.component.content.options | keyvalue" value="{{ $any(option.value).key}}">
-                    {{ $any(option.value).value}}
-                </mat-radio-button>
-            </mat-radio-group>
-    
+           
+            Test for the selector without change other infos.
+           
         </div>    
     
     </ng-container>
