--- a/src/app/modules/component/Component3121f9dfc5bb427ca055e6521008c7f95129a609d19b4df48659566e00894fa5.component.html
+++ b/src/app/modules/component/Component3121f9dfc5bb427ca055e6521008c7f95129a609d19b4df48659566e00894fa5.component.html
@@ -4,7 +4,7 @@
 
         <div class="mt-4">
            
-            Test for the selector without change other infos.
+            Test for the selector without change other infos.  <button (click)="Score()" mat-flat-button>Score</button>
            
         </div>    
 
