add score component

--- a/src/app/modules/component/Component3121f9dfc5bb427ca055e6521008c7f95129a609d19b4df48659566e00894fa5.component.html
+++ b/src/app/modules/component/Component3121f9dfc5bb427ca055e6521008c7f95129a609d19b4df48659566e00894fa5.component.html
@@ -2,12 +2,10 @@
 
     <ng-container>
 
-        <div class="mt-4">
-           
-            Test for the selector without change other infos.  <button (click)="Score()" mat-flat-button>Score</button>
-           
-        </div>    
-
+        <score-component
+        [data]="data"
+        [env]="env"
+        ></score-component>
         
     
     </ng-container>
